# LR8

./: .gitignore  Task_1.cpp  Task_1.h
Task_1/: CMakeLists.txt  CreatingNewStructArray.cpp  Task_1.cpp  Task_1.h  addstructs.cpp  deleteOrChange.cpp  findStructs.cpp  functionsForBinaryFile.cpp  mainmenu.cpp  quicksort.cpp  struct2.h  structs.h  union.h  utils.cpp  utils.h
Task_2/: CMakeLists.txt  CreatingNewStructArray.cpp  Task_2.cpp  Task_2.h  addstructs.cpp  deleteOrChange.cpp  functionsForTextFile.cpp  mainmenu.cpp  quicksort.cpp  struct1.h  union.h  utils.cpp  utils.h
